--- a/hunting.qmd
+++ b/hunting.qmd
@@ -1,4 +1,66 @@
 ---
-title: "EDS 230 - Hunting Assignment"
-format: html
+title: "Hunting and predator prey dynamics"
+author: "Haylee Oyler & Josephine Cardelle"
+format: 
+  html:
+    embed-resources: true
+execute:
+  warning: false
+  message: false
 ---
+
+```{r}
+library(deSolve)
+library(ggpubr)
+library(tidyverse)
+library(sensitivity)
+library(lhs)
+library(purrr)
+library(ggpubr)
+library(here)
+```
+
+```{r}
+source(here("hw8", "lotvhuntmod.R"))
+```
+## Part 2
+
+We chose to define stability as prey populations above 200 and predator populations above 20 after 100 years. We kept the 10:1 ratio of prey:predator that matched the initial conditions we went over in class. It makes sense that there would be much more prey than predators, and we're hoping both populations would increase over time. 
+
+Explore how different hunting levels and different minimum prey populations (before hunting is allowed) are likely to effect the stability of the populations of both predator and prey.
+
+
+A key challenge is how you might want to define stability? It is up to you but you will need to write a sentence to explain why you chose the measure that you did. 
+
+It is up to you how you "explore" hunting  - you can simply try different values of the parameters in your hunting model or do it more formally by running your model across a range of values. You could think about parameter interactions
+
+You can assume the following are best guesses of key parameters
+
+rprey=0.95, alpha=0.01, eff=0.6,pmort=0.4, K=2000,
+
+```{r}
+# Base parameters given in the assignment
+base_params <- c(rprey = 0.95, alpha = 0.01, eff = 0.6, pmort = 0.4, K = 2000)
+pars <- c(base_params, rhunt = 0.01, prey_min = 50)
+currpop <- c(prey = 10, pred = 1)
+days <- seq(from = 1, to = 500)
+
+# Run the ode model
+res <- ode(y = currpop, times = days, func = lotvhunt, parms = pars)
+res_df <- as.data.frame(res)
+colnames(res_df) <- c("time", "prey", "pred")
+
+res_long <- res_df %>%
+    pivot_longer(cols = c(prey, pred), names_to = "species", values_to = "population")
+
+# View the population changes over time
+ggplot(res_long, aes(x = time, y = population, color = species)) +
+    geom_line() +
+    labs(title = "Predator and Prey Populations Over Time",
+        x = "Time (days)",
+        y = "Population",
+        color = "Species") +
+    theme_minimal()
+```
+
+
