--- a/hunting.qmd
+++ b/hunting.qmd
@@ -7,6 +7,8 @@ format:
 execute:
   warning: false
   message: false
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r}
@@ -21,7 +23,7 @@ library(here)
 ```
 
 ```{r}
-source(here("hw8", "lotvhuntmod.R"))
+source(here("lotvhuntmod_haylee.R"))
 ```
 ## Part 2
 
@@ -42,8 +44,8 @@ rprey=0.95, alpha=0.01, eff=0.6,pmort=0.4, K=2000,
 # Base parameters given in the assignment
 base_params <- c(rprey = 0.95, alpha = 0.01, eff = 0.6, pmort = 0.4, K = 2000)
 pars <- c(base_params, rhunt = 0.01, prey_min = 50)
-currpop <- c(prey = 10, pred = 1)
-days <- seq(from = 1, to = 500)
+currpop <- c(prey = 100, pred = 10)
+days <- seq(0, 100, by = 1)
 
 # Run the ode model
 res <- ode(y = currpop, times = days, func = lotvhunt, parms = pars)
@@ -63,4 +65,78 @@ ggplot(res_long, aes(x = time, y = population, color = species)) +
     theme_minimal()
 ```
 
+## Grid Search Method
+```{r}
+rhunt_vals <- seq(0.001, 0.02, length.out = 15)
+prey_min_vals <- seq(100, 400, length.out = 15)
+
+param_grid <- expand.grid(rhunt = rhunt_vals, prey_min = prey_min_vals)
+```
+
+
+```{r}
+results <- param_grid %>%
+  mutate(
+    stable = map2_lgl(rhunt, prey_min, function(rh, pm) {
+      pars <- c(base_params, rhunt = rh, prey_min = pm)
+      out <- tryCatch({
+        df <- as.data.frame(ode(y = currpop, times = days, func = lotvhunt, parms = pars))
+        final <- df[nrow(df), ]
+        return(final$prey > 200 & final$pred > 20)
+      }, error = function(e) {
+        return(FALSE)
+      })
+      return(out)
+    })
+  )
+```
+
+```{r}
+# Plot the results
+ggplot(results, aes(x = prey_min, y = rhunt, z = as.numeric(stable))) +
+  geom_contour_filled(breaks = c(-Inf, 0.5, Inf)) +
+  scale_fill_manual(values = c("red", "green"), labels = c("Unstable", "Stable")) +
+  labs(title = "Stability by Hunting Parameters",
+       x = "Minimum Prey for Hunting",
+       y = "Hunting Rate",
+       fill = "Stability") +
+  theme_minimal()
+
+# Nothing is stable?
+```
+
+
+
+## Scenario Method
+
+### Scenario 1: Low hunting rate, high threshold, Scenario 2: Reasonable hunting, Scenario 3: Higher hunting, Scenario 4: Very high hunting
+```{r}
+# Different values for parameters 
+scenarios <- tibble(
+  name = c("Low hunt", "Moderate hunt", "High Hunt", "Extreme Hunt"),
+  rhunt = c(0.002, 0.01, 0.05, 0.1),
+  prey_min = c(400, 300, 200, 100)
+)
+
+results <- scenarios %>%
+  mutate(
+    output = map2(rhunt, prey_min, function(rh, pm) {
+      pars <- c(base_params, rhunt = rh, prey_min = pm)
+      as.data.frame(ode(y = currpop, times = days, func = lotvhunt, parms = pars))
+    })
+  )
+
+# Plot the scenarios
+results_long <- results %>%
+  mutate(name = factor(name, levels = name)) %>%
+  unnest(output) %>%
+  pivot_longer(cols = c(prey, pred), names_to = "species", values_to = "population")
+
+ggplot(results_long, aes(x = time, y = population, color = species)) +
+  geom_line() +
+  facet_wrap(~ name, ncol = 2) +
+  labs(title = "Population Dynamics Under Different Hunting Scenarios",
+       x = "Time (days)", y = "Population") +
+  theme_minimal()
+```
 
