--- a/hunting.qmd
+++ b/hunting.qmd
@@ -48,7 +48,6 @@ base_params <- c(rprey = 0.95, alpha = 0.01, eff = 0.6, pmort = 0.4, K = 2000)
 pars <- c(base_params, rhunt = 0.01, prey_min = 50)
 currpop <- c(prey = 100, pred = 10)
 days <- seq(0, 100, by = 1)
-years <- seq(1, 18250, by = 365)
 
 # Run the ode model
 res <- ode(y = currpop, times = days, func = lotvhunt, parms = pars)
@@ -68,47 +67,6 @@ ggplot(res_long, aes(x = time, y = population, color = species)) +
     theme_minimal()
 ```
 
-## Grid Search Method
-```{r}
-rhunt_vals <- seq(0.001, 0.02, length.out = 15)
-prey_min_vals <- seq(100, 400, length.out = 15)
-
-param_grid <- expand.grid(rhunt = rhunt_vals, prey_min = prey_min_vals)
-```
-
-
-```{r}
-results <- param_grid %>%
-  mutate(
-    stable = map2_lgl(rhunt, prey_min, function(rh, pm) {
-      pars <- c(base_params, rhunt = rh, prey_min = pm)
-      out <- tryCatch({
-        df <- as.data.frame(ode(y = currpop, times = days, func = lotvhunt, parms = pars))
-        final <- df[nrow(df), ]
-        return(final$prey > 200 & final$pred > 20)
-      }, error = function(e) {
-        return(FALSE)
-      })
-      return(out)
-    })
-  )
-```
-
-```{r}
-# Plot the results
-ggplot(results, aes(x = prey_min, y = rhunt, z = as.numeric(stable))) +
-  geom_contour_filled(breaks = c(-Inf, 0.5, Inf)) +
-  scale_fill_manual(values = c("red", "green"), labels = c("Unstable", "Stable")) +
-  labs(title = "Stability by Hunting Parameters",
-       x = "Minimum Prey for Hunting",
-       y = "Hunting Rate",
-       fill = "Stability") +
-  theme_minimal()
-
-# Nothing is stable?
-```
-
-
 
 ## Scenario Method
 
@@ -118,16 +76,20 @@ ggplot(results, aes(x = prey_min, y = rhunt, z = as.numeric(stable))) +
 scenarios <- tibble(
   name = c("Low hunt", "Moderate hunt", "High Hunt", "Extreme Hunt"),
   rhunt = c(0.001, 0.01, 0.05, 0.1),
-  prey_min = c(250, 500, 750, 1000)
+  prey_min = 50,
+  # prey_min = c(50, 100, 150, 200)
 )
+
+days_short <- seq(1, 100, by = 1)
 
 results <- scenarios %>%
   mutate(
     output = map2(rhunt, prey_min, function(rh, pm) {
       pars <- c(base_params, rhunt = rh, prey_min = pm)
-      as.data.frame(ode(y = currpop, times = days, func = lotvhunt, parms = pars))
+      as.data.frame(ode(y = currpop, times = days_short, func = lotvhunt, parms = pars))
     })
   )
+
 
 # Plot the scenarios
 results_long <- results %>%
@@ -142,7 +104,40 @@ ggplot(results_long, aes(x = time, y = population, color = species)) +
        x = "Time (days)", y = "Population") +
   theme_minimal()
 
-ggplot(results_long, aes(x = time, y = population, color = species)) +
+# ggplot(results_long, aes(x = time, y = population, color = species)) +
+#   geom_line() +
+#   facet_wrap(~ prey_min, ncol = 2) +
+#   labs(title = "Population Dynamics Under Different Hunting Scenarios",
+#        x = "Time (days)", y = "Population") +
+#   theme_minimal()
+```
+
+```{r}
+# Different values for parameters 
+scenarios_prey <- tibble(
+  name = c("Low prey_min", "Moderate prey_min", "High prey_min", "Extreme prey_min"),
+  prey_min = c(50, 100, 150, 200),
+  rhunt = 0.001
+)
+
+days_short <- seq(1, 100, by = 1)
+
+results_prey <- scenarios_prey %>%
+  mutate(
+    output = map2(prey_min, rhunt, function(rh, pm) {
+      pars <- c(base_params, rhunt = rh, prey_min = pm)
+      as.data.frame(ode(y = currpop, times = days, func = lotvhunt, parms = pars))
+    })
+  )
+
+
+# Plot the scenarios
+results_long_prey <- results_prey %>%
+  mutate(name = factor(name, levels = name)) %>%
+  unnest(output) %>%
+  pivot_longer(cols = c(prey, pred), names_to = "species", values_to = "population")
+
+ggplot(results_long_prey, aes(x = time, y = population, color = species)) +
   geom_line() +
   facet_wrap(~ prey_min, ncol = 2) +
   labs(title = "Population Dynamics Under Different Hunting Scenarios",
@@ -150,60 +145,39 @@ ggplot(results_long, aes(x = time, y = population, color = species)) +
   theme_minimal()
 ```
 
-### From chat...
 ```{r}
-# Lotka-Volterra with hunting
-lotvhunt <- function(t, pop, pars) {
-  with(as.list(c(pars, pop)), {
-    hunt <- ifelse(prey >= prey_min, rhunt * prey, 0)
-    hunt <- min(hunt, prey)
-    dprey <- rprey * (1 - prey / K) * prey - alpha * prey * pred - hunt
-    dpred <- eff * alpha * prey * pred - pmort * pred
-    return(list(c(dprey, dpred)))
-  })
-}
+# set parameter list
+pars <- data.frame(rprey = 0.1, alpha = 0.6, eff = 0.8, pmort = 0.4, K = 200, rhunt = 0.01, prey_min = 100)
 
-# Updated base parameters
-base_pars <- list(
-  rprey = 0.95, alpha = 0.01, eff = 0.6, pmort = 0.4,
-  K = 2000
-)
+# now lets try initial conditions that will be stable
+preyi <- with(pars, pmort / (eff * alpha))
+predi <- with(pars, rprey / alpha * (1 - (pmort / (eff * alpha *K))) - rhunt / alpha)
 
-# Initial populations
-init_pop <- c(prey = 750, pred = 150)  # Start with healthy populations
+preyi
+predi
+# times when you want to evaluate
+days <- seq(from = 1, to = 500)
 
-# Time span (50 years)
-times <- seq(0, 50, by = 1)
+# lets first see what happens when we start with 1 of each
+currpop <- c(prey = 1, pred = 1)
+# run our differential equation solver
+res <- ode(func = lotvhunt, y = currpop, times = days, parms = pars)
+# extract the results
+res_smallstart <- as.data.frame(res) %>% gather(key = "animal", value = "pop", -time)
+# graph both populations over time
+p1 <- ggplot(res_smallstart, aes(time, pop, col = animal)) +
+  geom_line()
+p1
 
-# Hunting parameter grid
-rhunt_vals <- seq(0, 0.05, by = 0.005)
-prey_min_vals <- seq(50, 1000, by = 100)
-results <- expand.grid(rhunt = rhunt_vals, prey_min = prey_min_vals)
-
-# Run simulations
-outcomes <- results %>%
-  rowwise() %>%
-  mutate(
-    stable = {
-      pars <- c(base_pars, rhunt = rhunt, prey_min = prey_min)
-      sim <- ode(func = lotvhunt, y = init_pop, times = days, parms = pars)
-      final_prey <- tail(sim[, "prey"], 1)
-      final_pred <- tail(sim[, "pred"], 1)
-      final_prey >= 100 && final_pred >= 50
-    }
-  )
-
-# Plotting the stable outcomes
-ggplot(outcomes, aes(x = rhunt, y = prey_min, fill = stable)) +
-  geom_tile(color = "white") +
-  scale_fill_manual(values = c("TRUE" = "forestgreen", "FALSE" = "firebrick")) +
-  labs(
-    title = "Sustainable Hunting Outcomes with Updated Parameters",
-    x = "Hunting Rate (rhunt)",
-    y = "Minimum Prey Threshold (prey_min)",
-    fill = "Stable"
-  ) +
-  theme_minimal()
-
+# lets first see what happens when we start our estimates of stable populations
+stablepop <- c(prey = preyi, pred = predi)
+res <- ode(func = lotvhunt, y = stablepop, times = days, parms = pars)
+# estract the results
+res_stablestart <- as.data.frame(res) %>% gather(key = "animal", value = "pop", -time)
+# graph both populations over time
+p2 <- ggplot(res_stablestart, aes(time, pop, col = animal)) +
+  geom_line()
+p2
 ```
+
 
