--- a/hunting.qmd
+++ b/hunting.qmd
@@ -23,7 +23,7 @@ library(here)
 ```
 
 ```{r}
-source(here("lotvhuntmod_haylee.R"))
+source(here("lotvhuntmod_hunt.R"))
 ```
 
 ## Part 2
@@ -33,7 +33,7 @@ source(here("lotvhuntmod_haylee.R"))
 **Rubric: Exploration of Stability** compared the stability metric across different values of parameters used to define hunting. The comparison should be explicit in the Rmarkdown - it could be a graph or a table but some way to show how different hunting levels influence stability
 
 
-We chose to define stability as prey populations above 200 and predator populations above 20 after 100 years. We kept the 10:1 ratio of prey:predator that matched the initial conditions we went over in class. It makes sense that there would be much more prey than predators, and we're hoping both populations would increase over time. 
+We chose to define stability as prey populations above 200 and predator populations above 20 after 50 years. We kept the 10:1 ratio of prey:predator that matched the initial conditions we went over in class. It makes sense that there would be much more prey than predators, and we're hoping both populations would increase over time. 
 
 Explore how different hunting levels and different minimum prey populations (before hunting is allowed) are likely to effect the stability of the populations of both predator and prey.
 
@@ -46,11 +46,11 @@ It is up to you how you "explore" hunting  - you can simply try different values
 # Base parameters given in the assignment
 base_params <- c(rprey = 0.95, alpha = 0.01, eff = 0.6, pmort = 0.4, K = 2000)
 pars <- c(base_params, rhunt = 0.01, prey_min = 50)
-currpop <- c(prey = 100, pred = 10)
+currpop <- c(prey = 300, pred = 150)
 days <- seq(0, 100, by = 1)
 
 # Run the ode model
-res <- ode(y = currpop, times = days, func = lotvhunt, parms = pars)
+res <- ode(y = currpop, times = days, func = lotvhunt, parms = pars, method = "radau")
 res_df <- as.data.frame(res)
 colnames(res_df) <- c("time", "prey", "pred")
 
@@ -77,16 +77,15 @@ scenarios <- tibble(
   name = c("Low hunt", "Moderate hunt", "High Hunt", "Extreme Hunt"),
   rhunt = c(0.001, 0.01, 0.05, 0.1),
   prey_min = 50,
-  # prey_min = c(50, 100, 150, 200)
 )
 
-days_short <- seq(1, 100, by = 1)
+days_short <- seq(1, 500, by = 1)
 
 results <- scenarios %>%
   mutate(
     output = map2(rhunt, prey_min, function(rh, pm) {
       pars <- c(base_params, rhunt = rh, prey_min = pm)
-      as.data.frame(ode(y = currpop, times = days_short, func = lotvhunt, parms = pars))
+      as.data.frame(ode(y = currpop, times = days_short, func = lotvhunt, parms = pars, method = "radau"))
     })
   )
 
@@ -103,13 +102,6 @@ ggplot(results_long, aes(x = time, y = population, color = species)) +
   labs(title = "Population Dynamics Under Different Hunting Scenarios",
        x = "Time (days)", y = "Population") +
   theme_minimal()
-
-# ggplot(results_long, aes(x = time, y = population, color = species)) +
-#   geom_line() +
-#   facet_wrap(~ prey_min, ncol = 2) +
-#   labs(title = "Population Dynamics Under Different Hunting Scenarios",
-#        x = "Time (days)", y = "Population") +
-#   theme_minimal()
 ```
 
 ```{r}
@@ -117,7 +109,7 @@ ggplot(results_long, aes(x = time, y = population, color = species)) +
 scenarios_prey <- tibble(
   name = c("Low prey_min", "Moderate prey_min", "High prey_min", "Extreme prey_min"),
   prey_min = c(50, 100, 150, 200),
-  rhunt = 0.001
+  rhunt = 0.1
 )
 
 days_short <- seq(1, 100, by = 1)
@@ -126,10 +118,9 @@ results_prey <- scenarios_prey %>%
   mutate(
     output = map2(prey_min, rhunt, function(rh, pm) {
       pars <- c(base_params, rhunt = rh, prey_min = pm)
-      as.data.frame(ode(y = currpop, times = days, func = lotvhunt, parms = pars))
+      as.data.frame(ode(y = currpop, times = days_short, func = lotvhunt, parms = pars, method = "radau"))
     })
   )
-
 
 # Plot the scenarios
 results_long_prey <- results_prey %>%
@@ -139,7 +130,7 @@ results_long_prey <- results_prey %>%
 
 ggplot(results_long_prey, aes(x = time, y = population, color = species)) +
   geom_line() +
-  facet_wrap(~ prey_min, ncol = 2) +
+  facet_wrap(~ name, ncol = 2) +
   labs(title = "Population Dynamics Under Different Hunting Scenarios",
        x = "Time (days)", y = "Population") +
   theme_minimal()
@@ -179,5 +170,4 @@ p2 <- ggplot(res_stablestart, aes(time, pop, col = animal)) +
   geom_line()
 p2
 ```
-
 
